feat(문제 5): 제한사항 확인 및 동전 개수 반환